# tablette

./: README.rst  example.py  setup.cfg  setup.py
tablette/: __init__.py  bases.py  utils.py
