[metadata]
name = Tablette
version = 1.0
summary = Format any iterator to a table.
description-file = README.rst
keywords = cli, formatter, table
home-page = https://github.com/johnnoone/tablette
author = Xavier Barbosa
author-email = clint.northwood@gmail.com
license = BSD
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Information Technology
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Topic :: Utilities
requires-dist =
    six
    termcolor
